Modify : modified all the classed with comments and features